// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelInfo Component renders CompassIcon when draftReceiverUser is not provided 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
  testID="channel-info"
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 6,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(0,0,0,0.08)",
              "borderRadius": 555,
              "height": 24,
              "padding": 4,
              "width": 24,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        {
          "color": "rgba(0,0,0,0.64)",
          "fontFamily": "OpenSans-SemiBold",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Direct Message Channel
    </Text>
  </View>
</View>
`;

exports[`ChannelInfo Component renders correctly for a DM channel 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
  testID="channel-info"
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 6,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(0,0,0,0.08)",
              "borderRadius": 555,
              "height": 24,
              "padding": 4,
              "width": 24,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        {
          "color": "rgba(0,0,0,0.64)",
          "fontFamily": "OpenSans-SemiBold",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Direct Message Channel
    </Text>
  </View>
</View>
`;

exports[`ChannelInfo Component renders correctly for a public channel 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
  testID="channel-info"
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 6,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(0,0,0,0.08)",
              "borderRadius": 555,
              "height": 24,
              "padding": 4,
              "width": 24,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        {
          "color": "rgba(0,0,0,0.64)",
          "fontFamily": "OpenSans-SemiBold",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Public Channel
    </Text>
  </View>
</View>
`;

exports[`ChannelInfo Component renders correctly for a thread 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
  testID="channel-info"
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 6,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(0,0,0,0.08)",
              "borderRadius": 555,
              "height": 24,
              "padding": 4,
              "width": 24,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        {
          "color": "rgba(0,0,0,0.64)",
          "fontFamily": "OpenSans-SemiBold",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Direct Message Channel
    </Text>
  </View>
</View>
`;

exports[`ChannelInfo Component renders the Avatar when draftReceiverUser is provided 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
  testID="channel-info"
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 6,
          }
        }
      />
    </View>
    <Text
      style={
        {
          "color": "rgba(0,0,0,0.64)",
          "fontFamily": "OpenSans-SemiBold",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Direct Message Channel
    </Text>
  </View>
</View>
`;
